<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="tarrotsystem.com.githublagos.view.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center_horizontal"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_profile_background"
                android:contentDescription="@string/about"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar_imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_elevation"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_avatar_placeholder"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="4dp"
                    app:civ_fill_color="@color/colorAccent" />

                <pttextview.widget.PTTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/avatar_imageView"
                    android:layout_marginTop="@dimen/vertical_spacing"
                    android:gravity="center"
                    android:text="@string/username_label"
                    app:typeface="pt_sans_narrow_bold"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/username_labels_"
                    android:textStyle="bold" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                android:title="    "
                app:layout_collapseMode="pin" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="70dp"
                    android:layout_marginEnd="70dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_toolbar_logo"/>
                </RelativeLayout>

                </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_share_white_24dp"
        android:tint="@color/colorWhite"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        app:rippleColor="@color/colorPrimary" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="@dimen/url_card"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/lg_keyline"
                android:layout_marginLeft="@dimen/md_keylines"
                android:layout_marginRight="@dimen/md_keylines"
                android:layout_marginTop="@dimen/xlg_keylines"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/md_keylines"
                    android:paddingRight="@dimen/md_keylines"
                   >

                    <pttextview.widget.PTTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/url_label"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/labels_"
                        app:typeface="pt_sans_narrow_regular"
                        android:textStyle="bold"
                        android:paddingTop="@dimen/pl_keylines"/>

                    <pttextview.widget.PTTextView
                        android:id="@+id/profile_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:paddingLeft="@dimen/xlg_keylines"
                        android:paddingTop="8dp"
                        android:paddingBottom="7dp"

                        app:typeface="pt_sans_narrow_regular"
                        android:paddingRight="5dp"
                        android:paddingStart="@dimen/xlg_keylines"
                        android:text="@string/profile_url"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_card"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginLeft="@dimen/md_keylines"
                android:layout_marginRight="@dimen/md_keylines"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/md_keylines"
                    android:paddingRight="@dimen/md_keylines"
                    android:paddingTop="@dimen/pl_keylines">

                    <pttextview.widget.PTTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/md_keylines"
                        android:text="@string/bio"
                        app:typeface="pt_sans_narrow_regular"

                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/labels_"
                        android:textStyle="bold" />

                    <pttextview.widget.PTTextView
                        android:id="@+id/bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/md_keylines"
                        app:typeface="pt_sans_narrow_regular"
                        android:text="@string/about"
                        android:textSize="14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>